# robil

./: .gitignore  .ver  .version  README.md  version
C11_OperatorControl/: CMakeLists.txt  mainpage.dox  manifest.xml  notes.txt
C11_OperatorControl/launch/: C11.launch
C11_OperatorControl/msg/: C11AC11_PUSH.msg  C11C11A_ACK.msg  C11C11A_MLV.msg
C11_OperatorControl/src/: C11_Node.cpp  C11_Node.h  C11_Node_Subscriber.h  HMIResponseServer.hpp  IFigure.h  ImageDraw.pro  PushHMIServer.hpp  arcitem.cpp  arcitem.h  cline.cpp  cline.h  cnode.cpp  cnode.h  figure.cpp  figure.h  graphicsview.cpp  graphicsview.h  griditem.cpp  griditem.h  imagedraw.cpp  imagedraw.h  imagedraw.qrc  imagedraw.ui  lineItemlist.h  lineitem.cpp  lineitem.h  lineitemlist.cpp  main.cpp  mapmain.cpp  mapmain.h  mapmain.qrc  mapmain.ui  mapwidget.cpp  mapwidget.h  pixitem.cpp  pixitem.h  pointitem.cpp  pointitem.h  polygonitem.cpp  polygonitem.h  (+12 more)
C11_OperatorControl/srv/: hmi_response.srv  push_img.srv
C21_VisionAndLidar/: CMakeCache.txt  CMakeLists.txt  Makefile  Notes.txt  cmake_install.cmake  disp.ppm  mainpage.dox  manifest.xml  rgb.ppm  rgb2.ppm
C21_VisionAndLidar/launch/: C21.launch  laser.launch  pan_test.launch  run.launch  vrc_task_3.launch
C21_VisionAndLidar/msg/: C21_C22.msg  C21_PANORAMA.msg  C21_PICTURE.msg  C21_RECT.msg
C21_VisionAndLidar/src/: C21ImageServiceTest.cpp  C21ImageTest.cpp  C21PanoramaTest.cpp  C21SceneTest.cpp  C21_Node.cpp  C21_ObjectLocationTest.cpp  C21testNode.cpp  resolution.h
C21_VisionAndLidar/srv/: C21.srv  C21_Pan.srv  C21_Pic.srv  C21_obj.srv
C23_ObjectRecognition/: CMakeLists.txt  FireHoseGrip  Makefile  Notes.txt  cmake_install.cmake  manifest.xml  output.pcd  plan.xml  test_pcd.pcd
C23_ObjectRecognition/3D_models/: FirehoseGrip.pcd  Gear.pcd  InsideSteeringWheel.pcd  OutsideSteeringWheel.pcd  Standpipe.pcd  Valve.pcd  firehose.txt  gear.txt  insideSteeringWheel.txt  outsideSteeringWheel.txt  standpipe.txt  valve.pcd  valve.txt
C23_ObjectRecognition/backup_models/: car.mdl
C23_ObjectRecognition/build_bak/: CMakeCache.txt  Makefile  cmake_install.cmake
C23_ObjectRecognition/docs/: .~lock.manual.odt#  C23_General_Info  C23_TO_DO  DARPA_Info  manual.odt
C23_ObjectRecognition/models/: CAR_DRIVER.mdl  CAR_FRONT.mdl  CAR_PASSENGER.mdl  CAR_REAR.mdl  car_behind.mdl  car_front.mdl  car_polaris_driver_side.mdl  fire_hose.mdl  standpipe.mdl  steering_wheel.mdl
C23_ObjectRecognition/msg/: C0C23_SAR.msg  C0C23_SEC.msg  C0C23_SEOB.msg  C23C0_GP.msg  C23C0_OD.msg  C23C0_ODIM.msg  C23C0_OPO.msg
C23_ObjectRecognition/src/: C23.cpp  C23_Detector.cpp  C23_Detector.hpp  C23_Node.cpp  C23_Node.hpp  C23_Node_TLD_Handler.cpp  C23_Node_TLD_Handler.h  C23_Tasks.cpp  C23_Utils.hpp  GeneralDetector.cpp  GeneralDetector.hpp  LearnObjectServer.hpp  SearchObjectServer.hpp  TrackObjectServer.hpp  c23.cpp  test.cpp
C23_ObjectRecognition/srv/: C23.srv  C23_orient.srv
C23_ObjectRecognition/training/: vocabulary.yml
C31_PathPlanner/: CMakeLists.txt  Notes.txt  mainpage.dox  manifest.xml
C31_PathPlanner/msg/: C31_Charge.msg  C31_Constraints.msg  C31_Corridor.msg  C31_Exception.msg  C31_Map.msg  C31_Position.msg  C31_Waypoints.msg  ppCharge.msg  ppConstraints.msg  ppCorridor.msg  ppMap.msg  ppPosition.msg  ppRequirements.msg  ppRobotDimension.msg  ppWaypoints.msg
C31_PathPlanner/src/: AStar.cpp  AStar.h  AltTransforms.cpp  AltTransforms.h  ConvertorC11.hpp  ConvertorC22.hpp  ConvertorC23.hpp  Events.hpp  Gps.h  Inflator.h  Map.cpp  Map.h  MapFileReader.hpp  PField.cpp  PField.h  PathPlanner.cpp  PathPlanner.h  PathPlanningServer.hpp  QTNode.cpp  QTNode.h  Tasks.hpp  Vec2d.hpp  WallDetector.cpp  WallDetector.h  cogniteam_pathplanner_parameters.h  cogniteam_pathplanning.cpp  cogniteam_pathplanning.h  cogniteam_pathplanning_tests.cpp  gpp.cpp  lpp.cpp  map_generator.cpp  test_addPointsToPath.cpp  test_c11_simulator.cpp  test_planning.cpp  test_planning_with_alts.cpp  test_planning_with_transit.cpp
C31_PathPlanner/srv/: C31_GetPath.srv  C31_PlanPath.srv  PathPlan.srv
C31_PathPlanner/tests/: IWantStaticPath  MapReader  README.txt  conf.params  create_tests  map1.grid  map10.alt  map2.grid  map3.grid  map3alt.grid  map4.grid  map5.grid  map6.grid  map7.grid  map8.alt  map9.alt  parselog.py  parsemap.py  pathplanning.tgz  points  test_result_MAP_1_FROM_21_2_TO_26_32  test_result_MAP_1_FROM_24_0_TO_12_44  test_result_MAP_1_FROM_24_0_TO_26_32  test_result_MAP_1_FROM_24_0_TO_26_37  test_result_MAP_1_FROM_24_0_TO_30_60  test_result_MAP_map1_FROM_21_2_TO_26_32_RR_1  test_result_MAP_map1_FROM_24_0_TO_12_44_RR_1  test_result_MAP_map1_FROM_24_0_TO_26_32_RR_1  test_result_MAP_map1_FROM_24_0_TO_26_37_RR_1  test_result_MAP_map1_FROM_24_0_TO_30_60_RR_1  test_result_MAP_map2_FROM_35_36_TO_28_40_RR_2  test_result_MAP_map2_FROM_35_36_TO_28_88_RR_2  test_result_MAP_map2_FROM_35_36_TO_92_67_RR_2  test_result_MAP_map2_FROM_35_36_TO_92_99_RR_2  test_result_MAP_map3_FROM_35_35_TO_28_40_RR_2  test_result_MAP_map3_FROM_35_35_TO_28_88_RR_2  test_result_MAP_map3_FROM_35_35_TO_92_67_RR_2  test_result_MAP_map3_FROM_35_35_TO_92_99_RR_2  test_result_MAP_map5_FROM_32_33_TO_44_60_RR_2_T_14_42_38_46_11_50_28_50  test_result_MAP_map5_FROM_32_33_TO_44_60_RR_2_T_36_48_10_53  (+6 more)
C67_CarManipulation/: CMakeLists.txt  Notes.txt  cmake_install.cmake  mainpage.dox  manifest.xml
C67_CarManipulation/action/: BrakePedal.action  GasPedal.action  GearHandle.action  HandBrake.action  Ignition.action
C67_CarManipulation/launch/: C67_drc.launch  C67_servers.launch
C67_CarManipulation/msg/: BrakePedalAction.msg  BrakePedalActionFeedback.msg  BrakePedalActionGoal.msg  BrakePedalActionResult.msg  BrakePedalFeedback.msg  BrakePedalGoal.msg  GasPedalAction.msg  GasPedalActionFeedback.msg  GasPedalActionGoal.msg  GasPedalActionResult.msg  GasPedalFeedback.msg  GearHandleAction.msg  GearHandleActionFeedback.msg  GearHandleActionGoal.msg  GearHandleActionResult.msg  GearHandleFeedback.msg  GearHandleGoal.msg  HandBrakeAction.msg  HandBrakeActionFeedback.msg  HandBrakeActionGoal.msg  HandBrakeActionResult.msg  HandBrakeGoal.msg  (+10 more)
(+3062 files in other folders)
